docs/process/v4_1/phase_6b/v18/zero_trust_gate_summary_v1.md
# Phase 6B v18 Zero Trust Gate Summary

Status: `PHASE_6B_V18_V4_LIFECYCLE_DECISIONS_APPLIED_SCHEMA_CONTROL_REQUIRED`

## Current Final State Summary

Source components: 15
Sub-surfaces: 103
Seeds: 103
Extraction edges: 452
Extraction edge distribution: hard_dependency=421 / deferred_with_reason=0 / conditional_dependency=31 / manual_review_required=0
Top-level seed dependency references: 421
Root seeds: 0
Current root seeds: []

## V4 Gate Summary

- v4 decision authority applied as docs-only lifecycle truth.
- Send opt-out hard edges with structured ADL refs: 6.
- Conditional opt-out dependency representations: 23.
- Terminal phase_doc_required hard edges: 0.
- Terminal capability_prerequisite hard edges: 0.
- Ticket generation and execution remain false.

Schema/control implementation remains the next required track.
